<resources>
    <string name="app_name">My Shop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products">جدیدترین محصولات</string>
    <string name="complete_list">لیست کامل</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="expand_text_view">ادامه مطلب</string>
    <string name="collapse_text_view">بستن</string>
    <string name="product_categories">دسته بندی محصولات</string>
    <string name="color_count">%1$d رنگ</string>
    <string name="sorting">مرتب سازی</string>
    <string name="filter">فیلتر کردن</string>
    <string name="filter_on">رنگ، نوع، قیمت و ...</string>
    <string name="product_list_no_product_message">محصول مورد نظر شما یافت نشد!</string>
    <string name="special_offer">پیشنهاد ویژه</string>
    <string name="product_list_tools_product_current_price">۱۲۵ هزار تومان</string>
    <string name="hint_searchbox">جستجو در دیجی‌کالا...</string>
    <string name="basket_null_message">سبد خرید شما خالی است!</string>
    <string name="follow_order">پیگیری سفارشات</string>
    <string name="total_sale_price">جمع کل خرید</string>
    <string name="complete_your_buying">خرید خود را نهایی کنید</string>
    <string name="color">رنگ :</string>
    <string name="warranty">گارانتی :</string>
    <string name="seller">فروشنده :</string>
    <string name="c_count">تعداد :</string>
    <string name="total_price">قیمت کل</string>
    <string name="cart_total_sale_amount">قیمت نهایی</string>
    <string name="delete">حذف</string>
    <string name="exist">موجود</string>
    <string name="filter_delete">پاک کردن</string>
    <string name="search">جستجو</string>
    <string name="product_filtering">فیلتر کردن محصول</string>
    <string name="do_filter">فیلتر کن</string>
    <string name="filter_from">از</string>
    <string name="filter_to">تا</string>
</resources>
