<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_withe">

        <LinearLayout
            android:id="@+id/container_actions"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_alignParentBottom="true"
            android:background="@color/white_grey50"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_weight="1.0"
                android:background="@color/gray_200"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/exists_product_filter_switch_compat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4.0dip"
                    android:background="@android:color/transparent"
                    android:checked="false"
                    android:gravity="center_vertical"
                    android:paddingStart="1.0dip"
                    android:paddingEnd="2.0dip"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12.0sp"
                    app:theme="@style/Color1SwitchStyle" />

                <TextView
                    android:id="@+id/bgy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans"
                    android:gravity="center_vertical"
                    android:text="@string/exist"
                    android:textColor="@color/gray_600"
                    android:textSize="14.0sp" />
            </LinearLayout>

            <View
                android:layout_width="0.70000005dip"
                android:layout_height="match_parent"
                android:background="#1a000000" />

            <LinearLayout
                android:id="@+id/btn_clear_filter_attributes"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_weight="1.0"
                android:background="@color/gray_200"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans"
                    android:gravity="center_vertical"
                    android:paddingRight="5.0dip"
                    android:text="@string/filter_delete"
                    android:textColor="@color/gray_600"
                    android:textSize="14.0dip" />

                <ImageView
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:contentDescription="@string/abc_action_bar_home_description"
                    android:src="@drawable/ic_clear_all_grey600_24dp" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_search_filter_attributes"
            android:layout_width="match_parent"
            android:layout_height="32.0dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/product_list_standard_margin"
            android:layout_marginTop="@dimen/product_list_standard_margin"
            android:layout_marginRight="@dimen/product_list_standard_margin"
            android:background="@drawable/gray_round_corner_border"
            android:drawableLeft="@drawable/ic_search_grey600_24dp"
            android:gravity="right|center"
            android:hint="@string/search"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:singleLine="true"
            android:textColor="@color/black_light"
            android:textCursorDrawable="@drawable/cursor_search"
            android:textSize="14.0sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_filter_attributes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/container_actions"
            android:layout_below="@id/edit_text_search_filter_attributes"
            android:divider="@color/dividersColor"
            android:dividerHeight="0.70000005dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.70000005dip"
            android:layout_above="@id/container_actions"
            android:background="#1a000000" />
    </RelativeLayout>
</layout>